<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:textAlignment="viewEnd">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="wrap_content"
    tools:context=".Actividad_InicioSesion">

    <TextView
        android:id="@+id/txtBienvenido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/icono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintBottom_toTopOf="@+id/contenedorLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenido"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/contenedorLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/contenedorRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono">


        <EditText
            android:id="@+id/loginEmail"
            style="@style/textoEditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/txtEmail"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/loginContraseña"
            style="@style/textoEditable"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/pass"

            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedorLogin">


        <Button
            android:id="@+id/btnLoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:text="@string/iniciarSesion"
            android:textColor="@color/black"
            android:theme="@style/botonAmarillo" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:text="@string/registrarse"
            android:textColor="@color/black"
            android:theme="@style/botonAmarillo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedorRegistro">

        <ImageView
            android:id="@+id/imgMaps2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/mapa" />

        <TextView
            android:id="@+id/txtMaps3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/encuentranos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imgInsta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/instagram" />

        <TextView
            android:id="@+id/txtInsta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/instagram"
            android:textColor="@color/white"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>