<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:textAlignment="viewEnd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/marco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".Actividad_Registro">

        <LinearLayout
            android:id="@+id/encabezado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.965"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgEncabezado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/logoalargate" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/contenedorAnadir"
            style="@style/contenedorRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/round_layout"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/contenedorRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encabezado">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_field">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/campoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_field"
                    android:hint="@string/nombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorApellidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_field"
                    android:hint="@string/apellidos" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_field"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorContraseña"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_field">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/campoContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_field"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_field"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:maxLength="9" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout

                android:id="@+id/linealCondiciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginBottom="8dp"
                    android:id="@+id/textoCondiciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_field"
                    android:text="@string/politicas"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkCondiciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedorRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:text="@string/registrarse"
                android:textColor="@color/black"
                android:theme="@style/botonAmarillo" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>