<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgEncabezado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/encabezado"
            app:srcCompat="@drawable/logoalargate" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/round_layout"

        android:id="@+id/marcoMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encabezado"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgAjustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/imgPerfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ajustescrono" />

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAjustes"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gymprofile" />

        <ImageView
            android:id="@+id/imgProfesores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profesionales"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgClases"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAjustes"
            app:srcCompat="@drawable/logoredondo" />

        <ImageView
            android:id="@+id/imgClases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clases"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProfesores"
            app:layout_constraintTop_toBottomOf="@+id/imgPerfil"
            app:srcCompat="@drawable/mancuernasbg" />

        <TextView
            android:id="@+id/txtAjustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="17dp"
            android:text="@string/ajustes"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/imgProfesores"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAjustes" />

        <TextView
            android:id="@+id/txtPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:text="@string/perfil"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

        <TextView
            android:id="@+id/txtProfesionales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/profesionales"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProfesores" />

        <TextView
            android:id="@+id/txtClases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:text="@string/clases"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtProfesionales"
            app:layout_constraintTop_toBottomOf="@+id/imgClases" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>