<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/marcoPantallaAnadirReserva"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Actividad_Anadir_Reserva">

    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgEncabezado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logoalargate" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/contenedorAnadir"
        style="@style/contenedorRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/round_layout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encabezado">


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_field">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/campoNombreDeClase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_field"
                android:hint="@string/nombre" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contenedorSpinnerProfesores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_field">

            <Spinner
                android:id="@+id/spnProfesores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Profes"
                android:entries="@array/profes"
                android:minHeight="48dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:id="@+id/btnFechaReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:text="@string/fecha"
            android:textColor="@color/black"
            android:theme="@style/botonAmarillo" />

        <Button

            android:id="@+id/btnAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:text="@string/aceptar"
            android:textColor="@color/black"
            android:theme="@style/botonAmarillo" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>