<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maroGeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Actividad_DatosPerfil">

    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgEncabezado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logoalargate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/marcoDatos"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encabezado">

        <TextView

            android:id="@+id/txtCabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mis_datos_personales"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <androidx.appcompat.widget.AppCompatImageView

            android:id="@+id/imgFotoGaleria"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/caleria" />

        <TextView

            android:id="@+id/txtCambiarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_imagen"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="18sp" />

        <EditText

            android:id="@+id/txtNombrePerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:minHeight="48dp"

            android:text="Nombre"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtApellidosPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Apellidos"

            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTelefonoPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Telefono"

            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtEmailPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Email"

            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="invisible" />

        <Button

            android:id="@+id/btnActualizarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/actualizar_datos"
            android:textColor="@color/black"
            android:theme="@style/botonAmarillo" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>